[package]
name = "rest_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
near-primitives = "0.20.1"
near-api-lib = "0.1.0-alpha"
serde = "1.0"
serde_json = "1.0"
